# When we do these to-do-laters, let's make a bigger folder 
# and include multiple vers. of "small_os" for the diff changes within it.
# Stop writing comments here.
[package]
name = "small_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xF4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (QemuExitCode::Success << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# Not sure how I feel about all these dependencies...
[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2" # Let's manually write out the assembly, etc. instead of this later.
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Let's make our own ver. of this once we're done with the tutorial's given.
[dependencies.bootloader]
version = "0.9"
features = ["map_physical_memory"]
